# lrcget

./: .gitignore  README.md  pyproject.toml
src/lrcget/: __init__.py  cli.py  client.py  models.py
