[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lrcget"
version = "0.1.0"
description = "Python library and CLI for the lrclib.net lyrics API"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "click>=8.0",
]

[project.scripts]
lrcget = "lrcget.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/lrcget"]
